dashboard/static/css/style.css
@import "fonts.css";

/* ********** Global Settings ********** */

body,html{
    height: 100%;
    width: 100%;
    background-color: #eee;
    color: black;
    font-family: 'source_sans_proregular';
}

.noselect {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.doselect {
 -moz-user-select: text;
 -khtml-user-select: text;
 -webkit-user-select: text;
 -ms-user-select: text;
 user-select: text;
 cursor: text;
}

.on {
	color: #ffffff;
}

.off {
	color: #000000;
}

.exit-off-canvas {
	position: fixed !important;
}

.disabled {
	color: #9c210c;
}

.main-section, .app-section{ 
	height: auto;
	margin-top: 45px;
	margin-top: 2.8125rem;
}

.off-canvas-wrap, .inner-wrap {
	height: auto;
	margin-bottom:0px;
}

.page{ height: 100%; }


/* ********** Top Bar Settings ********** */

.tab-bar { 
	background: #313366;
	z-index: 1000;
	position: fixed;
	width: 100%;
	top: 0;
}

@media only screen and (min-width: 40.063em) {
	.tab-bar {z-index: 1005;}
}

.tab-bar a { color : #fff;}
.tab-bar .middle {
	margin-right: auto;
	width: 192px;
	width: 12rem;
	margin-left: auto;
	text-align: center;
}
.tab-bar .right-small, .left-small { border-color: #efefef;}
.left-small {position: inherit;}

.top-bar h1  {
	width: 16px;
	size: 1rem;
}

#tools-container {
	margin-left: 16px;
	margin-left: 1rem;
	height: 100%;
	width: 160px;
	width: 10rem;
	max-width: 192px;
	max-width: 12rem;
	overflow: hidden;
	#fff-space: nowrap;
	text-overflow: ellipsis;
}

#tools-container button {
	padding: 0px;
	margin-right: 20px;
	margin-right: 1,25rem;
	margin-bottom: 0px;
	height: 100%;
	max-width: inherit;
}

#tools-container *:focus {
	outline: none !important;
}

#tools-container .dropdown.button:after, #tools-container button.dropdown:after {
	border-width: 0;
	right: 13px;
	right: 0.8125rem;
	margin-top: -2px;
	margin-top: -0.125rem;
}

#tools-container .tools-current > li {
	list-style: none;
}

#tools-container .tools-current > li a {
	padding: 13px 16px 13px 32px;
	padding: 13px 1rem 13px 2rem;
	font-size: 16px;
	font-size: 1rem;
}

 #tools-container .tools-current > li a, #tools-container .tools-other > li a {
	background-image: url('../img/icon_status_green.png');
	background-repeat: no-repeat;
	background-size: 10px;
	background-size: 0.625rem;
	background-position: center left 14px;
	background-position: center left 0.875rem;
	text-align: left;
}

#tools-container .tools-current > li a.err 		{ background-image: url('../img/icon_status_red.png'); 	}
#tools-container .tools-current > li a.disc 	{ background-image: url('../img/icon_status_grey.png');	}
#tools-container .tools-current > li a.paus 	{ background-image: url('../img/icon_status_yellow.png'); }

#tools-container .tools-other > li { border-bottom: 1px solid #eee; }

#tools-container .tools-other > li a, #tools-container .tools-refresh > li a {
	padding: 11px 16px 11px 32px;
	padding: 11px 1rem 11px 2rem;
	font-size: 15px;
	font-size: 0.9375rem;
}

#tools-container .tools-refresh > li a {
	height: 38px;
	height: 2.375rem;
	background: url('../img/icon_refresh.png') center no-repeat;
	background-size: 20px;
	background-size: 1.25rem;
}

#right-position-container {
	height: 100%;
	width: 15rem;
	position: absolute;
	color: #eee;
	right: 2rem;
	top: 0;
	vertical-align: middle;
}


#right-position-container span, #right-position-container label {
	color: #fff;
	font-size: 15px;
	font-size: 0.9375rem;
}




/* ********** Menu Style ********** */

.right-off-canvas-menu, .left-off-canvas-menu { 

	-moz-box-shadow: 0 0 20px rgba(0,0,0,0.2);
	-webkit-box-shadow: 0 0 20px rgba(0,0,0,0.2);
	box-shadow: 0 0 20px rgba(0,0,0,0.2);
	color: #fff;
	top: 45px;
	top: 2.8125rem;
	bottom: 0px;
	height: auto;
	position: fixed;
}

.left-off-canvas-menu {
	background-color: #444;
	width: 182px;
	width: 11.375rem;
}

.right-off-canvas-menu {
	background-color: #9C210C;
	width: 222px;
	width: 13.875rem;
}


/* Change #left-menu & #right-menu config */
@media only screen and (min-width: 64.063em) {
	.right-off-canvas-menu	{ float: right; }
}

@media only screen and (min-width: 40.063em) {
	.left-off-canvas-menu	{ float: left; }
	#close_menu.exit-off-canvas	{ display: none !important; }
}

@media only screen and (max-width: 40.063em) {
	.left-off-canvas-menu {
		width: 220px;
		width: 13.75rem;
	}
}

.left-menu.icon-bar > * { 
	padding: 6px 12px;
	padding: 0.375rem 0.75rem;
}

#left-menu.colapsed {
	width: 46px;
	width: 2.875rem;
}

ul.off-canvas-list li:not(.tool) a:hover, ul.off-canvas-list li.no-link:hover {
	background-color: #666;
	background-color: rgba(0,0,0,0.25);
	cursor: pointer;
}

ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
	border-bottom : 0px solid #fff;
	color : rgb(240,240,240);
	padding: 11px;
	padding: 0.6875rem;
}

.offcanvas-overlap-left .exit-off-canvas :hover,
.offcanvas-overlap-right .exit-off-canvas :hover {
	background: rgba(0, 0, 0, 0.08);
	-webkit-transition: opacity .2s;
	transition: opacity .2s;
}

.offcanvas-overlap-left .exit-off-canvas,
.offcanvas-overlap-right .exit-off-canvas {
	background: rgba(0, 0, 0, 0.15);
}

@media only screen and (min-width: 40.063em) {
	.offcanvas-overlap-left .exit-off-canvas:hover,
	.offcanvas-overlap-right .exit-off-canvas:hover {
	background: rgba(0, 0, 0, 0.08);
	-webkit-transition: opacity .2s;
	transition: opacity .2s;
}}


#util-menu-small a {
	padding-left: 44px;
	padding-left: 2.75rem;
	background-repeat: no-repeat;
	background-size: 20px;
	background-size: 1.25rem;
	background-position: center left 12px;
	background-position: center left 0.75rem;
}

/* 
*** Widgets Styles
*/

.widget {
	margin-bottom: 7px;
	margin-bottom: 0.4375rem;
}

.widget.colapsed span {	display: none; }
.widget.colapsed label { display: none; }

.widget.colapsed ul li a {
	height: 46px;
	height : 2.875rem;
	padding-left : 0px !important;
}
/* ... */

